--- a/style.css
+++ b/style.css
@@ -8,24 +8,26 @@ body {
   background-color: hsl(47, 88%, 63%);
   font-family: Figtree;
   font-size: 1rem;
+  box-sizing: border-box;
 }
 main {
-  width: clamp(23rem, 15rem, 20rem);
+  width: clamp(15rem, 31vw, 20rem);
   background-color: white;
   border-radius: 1rem;
   border: 1px solid;
   box-shadow: 10px 10px 1px rgb(0, 0, 0);
+  padding: 1rem;
 }
-.card,
-.profile {
-  margin: 0px 0px 1rem 1rem;
+.thumbnail {
+  display: flex;
+  justify-content: center;
 }
 .illustration {
-  display: block;
-  margin: 0.8rem auto;
+  min-width: 15rem;
+  max-width: 25rem;
   border-radius: 1rem;
 }
-h2,
+h1,
 span,
 .learning {
   font-weight: 800;
@@ -35,10 +37,14 @@ span,
   padding: 0.5rem 1rem;
   background-color: hsl(47, 88%, 63%);
   border-radius: 0.5rem;
-  margin: 0.5rem 0 0 0;
+  margin-top: 1.4rem;
+  margin-bottom: 0.6rem;
 }
 .date {
-  margin: 0.5rem 0 0 0;
+  margin: 0;
+}
+h1 {
+  font-size: 1.5rem;
 }
 .profile {
   display: flex;
